// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Group with one checkbox Field 1`] = `
<div>
  <form
    class=""
    novalidate=""
  >
    <div
      aria-labelledby="rbf_group_label"
      class="form-group"
      id="group"
      role="group"
    >
      <label
        class="rbf-group  form-label"
        id="rbf_group_label"
      >
        Group
      </label>
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="checkbox"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="checkbox"
          id="rbf_checkbox_label"
        >
          Checkbox
        </label>
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`renders Group with one text Field 1`] = `
<div>
  <form
    class=""
    novalidate=""
  >
    <div
      aria-labelledby="rbf_group_label"
      class="form-group"
      id="group"
      role="group"
    >
      <label
        class="rbf-group  form-label"
        id="rbf_group_label"
      >
        Group
      </label>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="text"
          id="rbf_text_label"
        >
          Text
        </label>
        <input
          class="form-control"
          id="text"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`renders Group with two checkbox Fields 1`] = `
<div>
  <form
    class=""
    novalidate=""
  >
    <div
      aria-labelledby="rbf_group_label"
      class="form-group"
      id="group"
      role="group"
    >
      <label
        class="rbf-group  form-label"
        id="rbf_group_label"
      >
        Group
      </label>
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="checkbox_1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="checkbox_1"
          id="rbf_checkbox_1_label"
        >
          Checkbox 1
        </label>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="checkbox_2"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="checkbox_2"
          id="rbf_checkbox_2_label"
        >
          Checkbox 2
        </label>
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`renders Group with two text Fields 1`] = `
<div>
  <form
    class=""
    novalidate=""
  >
    <div
      aria-labelledby="rbf_group_label"
      class="form-group"
      id="group"
      role="group"
    >
      <label
        class="rbf-group  form-label"
        id="rbf_group_label"
      >
        Group
      </label>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="text_1"
          id="rbf_text_1_label"
        >
          Text 1
        </label>
        <input
          class="form-control"
          id="text_1"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="text_2"
          id="rbf_text_2_label"
        >
          Text 2
        </label>
        <input
          class="form-control"
          id="text_2"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`renders default Group 1`] = `
<div>
  <form
    class=""
    novalidate=""
  >
    <div
      aria-labelledby="rbf_group_label"
      class="form-group"
      id="group"
      role="group"
    >
      <label
        class="rbf-group  form-label"
        id="rbf_group_label"
      >
        Group
      </label>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`renders default Group with hiddenLabel 1`] = `
<div>
  <form
    class=""
    novalidate=""
  >
    <div
      aria-label="Group"
      class="form-group"
      id="group"
      role="group"
    />
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;
